<resources>
    <string name="app_name">FuelOnWheelsApp</string>
    <string name="Mobile_Number"><font fgcolor="#000000">Mobile Number</font></string>
    <string name="OTP"><font fgcolor="#000000">OTP</font></string>
    <string name="didn_t_get_an_otp_resend">Didn\'t get an OTP? <b>Resend</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="delivering_to">Delivering To</string>
    <string name="user">John Doe</string>
    <string name="address">Address</string>
    <string name="empire_state_building_address">20 W 34th St, New York, NY 10001, United States</string>
    <string name="code">Code</string>
    <string name="delivery_code_1">NFA21BXO1</string>
    <string name="eta">ETA</string>
    <string name="order">Order</string>
    <string name="petrol_1l">Petrol (1L)</string>
    <string name="minus">-</string>
    <string name="x1">x1</string>
    <string name="plus">+</string>
    <string name="add">Add</string>
    <string name="diesel_1l">Diesel (1L)</string>
    <string name="order_summary">Order Summary</string>
    <string name="petrol_x_quantity">Petrol x Quantity</string>
    <string name="price">Rs. 350</string>
    <string name="diesel_x_quantity">Diesel X Quantity</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="rs_50">Rs. 50/-</string>
    <string name="total">Total</string>
    <string name="rs_x">Rs. 550/-</string>
    <string name="choose_a_method_of_payment">Choose A Method Of Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="upi">UPI</string>
    <string name="thank_you">Thank You</string>
    <string name="you_will_shortly_receive_the_details_of_order_and_delivery_person_through_email_sms">You will shortly receive the details of order and delivery person through Email/SMS.</string>
    <string name="thank_you_for_placing_your_order">Thank You for placing your Order!</string>
    <string name="from">From</string>
    <string name="app_version">1.0.0</string>
</resources>