<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTertiary"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg2"
                android:backgroundTint="@color/fowGray"
                android:paddingBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/order_summary"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/petrol_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/petrol_x_quant"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/petrol_x_quantity"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/petrol_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/price"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/diesel_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/diesel_x_quant"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/diesel_x_quantity"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/diesel_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/price"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/delivery"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/delivery_charges"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/delivery_charges"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/rs_50"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/total"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/total_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/rs_x"
                        android:textAlignment="center"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg2"
                android:backgroundTint="@color/fowGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:padding="10dp"
                    android:text="@string/choose_a_method_of_payment"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/textView17"
                    android:checkedButton="@id/radioButton3"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/cash_on_delivery"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:padding="10dp"
                        android:text="@string/upi"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />
                </RadioGroup>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>