<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:backgroundTint="#adb6bc"
    tools:context=".dashboard.OrderFragment">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/petrol_1l"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/petrol_minus"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/petrol_quant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:text="@string/x1"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/petrol_plus"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/petrol_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/diesel_1l"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/diesel_minus"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/diesel_quant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:text="@string/x1"
            android:textAlignment="center"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/diesel_plus"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/diesel_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>