<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:id="@+id/dashboard_main_layout"
    tools:context=".dashboard.DashboardActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#D5E9F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/dashboard_navigation" />

    <TableLayout
        android:id="@+id/delivery_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg2"
        android:backgroundTint="@color/fowGray"
        android:paddingBottom="5dp"
        android:shrinkColumns="1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/delivery_details"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/delivering_to"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/delivering_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/user"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/delivery_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/empire_state_building_address"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/from"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fuel_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/empire_state_building_address"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/code"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/delivery_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/delivery_code_1"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="Distance"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dashboard_table_tv_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/eta"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/eta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/order"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>